syntax = "proto2";

package entity;

import "locale_text.proto";

message InvCategory {
    required int32 id = 1;
    repeated LocaleText names = 2;
}
