syntax = "proto2";

package entity;

import "locale_text.proto";

message InvGroup {
    required int32 id = 1;
    repeated LocaleText names = 2;
    required int32 category_id = 3;
}
