syntax = "proto2";

package entity;

import "locale_text.proto";

message SolarSystem {
    required int32 id = 1;
    required int32 constellation_id = 2;
    required int32 region_id = 3;
    repeated LocaleText names = 4;
    required double security = 5;
    required string security_class = 6;
}
